--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,13 @@ python-dotenv
 google
 google-ai-generativelanguage
 google.generativeai
+Flask
+Flask-SQLAlchemy
+Werkzeug
+os
+json
+time
+huggingface_hub
+io
+base64
+PIL
