--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ activityCompose = "1.9.3"
 composeBom = "2024.04.01"
 lottie = "3.4.0"
 navigationCompose = "2.8.5"
+okhttp = "4.12.0"
 uiTextGoogleFonts = "1.7.6"
 
 [libraries]
@@ -36,6 +37,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
